--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto fs-5">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home"><i class="bi bi-house me-2"></i>Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home"><i
+                                class="bi bi-house me-2"></i>Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about-me"><i class="bi bi-person me-2"></i>About Me</a>
@@ -152,7 +153,7 @@
     </svg>
 
     <!-- awal contact me -->
-    
+
     <section id="contact-me">
         <div class="container">
             <div class="row text-center mt-3 mb-5">
@@ -165,24 +166,26 @@
                     <form>
                         <div class="mb-3">
                             <label for="name" class="form-label">nama lengkap</label>
-                            <input type="text" class="form-control" id="name"
-                                aria-describedby="name" />
+                            <input type="text" class="form-control" id="name" aria-describedby="name" />
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email"
-                                aria-describedby="email" />
+                            <input type="email" class="form-control" id="email" aria-describedby="email" />
                         </div>
-                            <div class="mb-3">
-                                <label for="pesam" class="form-label">pesan</label>
-                                <textarea class="form-control" id="pesan" rows="3"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary mb-5">Submit</button>
+                        <div class="mb-3">
+                            <label for="pesam" class="form-label">pesan</label>
+                            <textarea class="form-control" id="pesan" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary mb-5">Send</button>
                     </form>
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,96L0,32L75.8,32L75.8,64L151.6,64L151.6,32L227.4,32L227.4,160L303.2,160L303.2,160L378.9,160L378.9,224L454.7,224L454.7,32L530.5,32L530.5,288L606.3,288L606.3,0L682.1,0L682.1,192L757.9,192L757.9,160L833.7,160L833.7,160L909.5,160L909.5,288L985.3,288L985.3,288L1061.1,288L1061.1,224L1136.8,224L1136.8,224L1212.6,224L1212.6,320L1288.4,320L1288.4,288L1364.2,288L1364.2,288L1440,288L1440,320L1364.2,320L1364.2,320L1288.4,320L1288.4,320L1212.6,320L1212.6,320L1136.8,320L1136.8,320L1061.1,320L1061.1,320L985.3,320L985.3,320L909.5,320L909.5,320L833.7,320L833.7,320L757.9,320L757.9,320L682.1,320L682.1,320L606.3,320L606.3,320L530.5,320L530.5,320L454.7,320L454.7,320L378.9,320L378.9,320L303.2,320L303.2,320L227.4,320L227.4,320L151.6,320L151.6,320L75.8,320L75.8,320L0,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0d6efd" fill-opacity="1"
+                d="M0,96L0,32L75.8,32L75.8,64L151.6,64L151.6,32L227.4,32L227.4,160L303.2,160L303.2,160L378.9,160L378.9,224L454.7,224L454.7,32L530.5,32L530.5,288L606.3,288L606.3,0L682.1,0L682.1,192L757.9,192L757.9,160L833.7,160L833.7,160L909.5,160L909.5,288L985.3,288L985.3,288L1061.1,288L1061.1,224L1136.8,224L1136.8,224L1212.6,224L1212.6,320L1288.4,320L1288.4,288L1364.2,288L1364.2,288L1440,288L1440,320L1364.2,320L1364.2,320L1288.4,320L1288.4,320L1212.6,320L1212.6,320L1136.8,320L1136.8,320L1061.1,320L1061.1,320L985.3,320L985.3,320L909.5,320L909.5,320L833.7,320L833.7,320L757.9,320L757.9,320L682.1,320L682.1,320L606.3,320L606.3,320L530.5,320L530.5,320L454.7,320L454.7,320L378.9,320L378.9,320L303.2,320L303.2,320L227.4,320L227.4,320L151.6,320L151.6,320L75.8,320L75.8,320L0,320L0,320Z">
+            </path>
+        </svg>
     </section>
     <!-- akhir contact me -->
 
